k8s/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: NodePort
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: websecure
      port: 443
      targetPort: websecure
    - name: argocd
      port: 9000
      targetPort: argocd
  selector:
    app: traefik
